--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Hello World</title>
 </head>
 <body>
-	<h1>GWS Wendy </h1>
+	<h1>Wendy Best Vocal in 3rd Gen </h1>
+	<h2>GWS Wendy </h2>
 </body>
 </html>
